--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
   <button id="dark-mode-toggle" class="button">🌙 Toggle Dark Mode</button>
   <button id="open-site" class="button">🌐 Open Web Version</button>
   <button id="install-button" class="button" style="display:none;">📲 Install App</button>
+
   <script>
     const appURL = "https://sites.google.com/view/countryinnsnewforest";
 
@@ -240,5 +241,9 @@
       }
     });
   </script>
+
+  <!-- ✅ Wappaa Push Notification Script -->
+  <script type="text/javascript" src="https://wappaa.com/webusers/44414-1747667239/push/wappaa-init44414-1747667239.js"></script>
+
 </body>
 </html>
