--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </head>
 <body>
   <div class="loading-screen" id="loading-screen">
-    <img src="Logo-removebg.png" alt="Country Inns Logo" class="png" />
+    <img src="icon-192x192.png" alt="Country Inns Logo" class="png" />
     <div class="spinner"></div>
   </div>
 
