--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Country Inns App</title>
 
   <!-- PWA Manifest -->
@@ -11,7 +11,7 @@
   <!-- Favicon -->
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
-  <!-- Theme -->
+  <!-- Theme Color -->
   <meta name="theme-color" content="#000000" />
 
   <style>
@@ -22,7 +22,7 @@
       --background-dark: #121212;
       --button-bg: var(--primary-color);
       --button-text: #fff;
-      --transition-speed: 0.4s;
+      --transition-speed: 0.3s;
     }
 
     body {
@@ -62,14 +62,12 @@
       pointer-events: none;
     }
 
-    .spinner {
-      width: 50px;
-      height: 50px;
-      border: 5px solid rgba(0,0,0,0.1);
-      border-top: 5px solid var(--primary-color);
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      margin-top: 20px;
+    .spinner-logo {
+      width: 100px;
+      height: 100px;
+      margin-bottom: 20px;
+      animation: spin 2s linear infinite, fadeIn 2s ease-in-out forwards;
+      opacity: 0;
     }
 
     @keyframes spin {
@@ -77,16 +75,8 @@
       100% { transform: rotate(360deg); }
     }
 
-    /* Logo Animation */
-    .logo {
-      width: 120px;
-      opacity: 0;
-      animation: fadeIn 2.5s ease-in-out forwards;
-    }
-
     @keyframes fadeIn {
-      0% { opacity: 0; transform: scale(0.9); }
-      100% { opacity: 1; transform: scale(1); }
+      to { opacity: 1; }
     }
 
     /* Buttons */
@@ -119,9 +109,9 @@
   </style>
 </head>
 <body>
+  <!-- Loading Splash -->
   <div class="loading-screen" id="loading-screen">
-    <img src="favicon-32x32.png" alt="Country Inns Logo" class="png" />
-    <div class="spinner"></div>
+    <img src="logo.png" alt="Loading" class="spinner-logo" />
   </div>
 
   <h1>Welcome to Country Inns</h1>
@@ -132,41 +122,44 @@
   <script>
     const appURL = "https://sites.google.com/view/countryinnsnewforest";
 
-    // Redirect if App is Installed
+    // Redirect if installed
     if (window.matchMedia('(display-mode: standalone)').matches || navigator.standalone) {
       window.location.href = appURL;
     }
 
-    // Splash screen
+    // Splash screen delay
     window.addEventListener("load", function () {
       setTimeout(() => {
         document.getElementById("loading-screen").classList.add("fade-out");
-      }, 2000); // can increase this duration if you want
+      }, 2000);
     });
 
-    // Dark Mode
+    // Dark mode toggle
     const darkModeToggle = document.getElementById("dark-mode-toggle");
     if (localStorage.getItem("dark-mode") === "enabled") {
       document.body.classList.add("dark-mode");
       darkModeToggle.textContent = "☀️ Light Mode";
     }
+
     darkModeToggle.addEventListener("click", function () {
       document.body.classList.toggle("dark-mode");
-      darkModeToggle.textContent = document.body.classList.contains("dark-mode") ? "☀️ Light Mode" : "🌙 Dark Mode";
-      localStorage.setItem("dark-mode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
+      const isDark = document.body.classList.contains("dark-mode");
+      darkModeToggle.textContent = isDark ? "☀️ Light Mode" : "🌙 Dark Mode";
+      localStorage.setItem("dark-mode", isDark ? "enabled" : "disabled");
     });
 
-    // Open Web Version
+    // Open live site
     document.getElementById("open-site").addEventListener("click", function () {
       window.location.href = appURL;
     });
 
-    // Install Prompt
+    // Install prompt
     let deferredPrompt;
-    window.addEventListener("beforeinstallprompt", (event) => {
-      event.preventDefault();
-      deferredPrompt = event;
-      document.getElementById("install-button").style.display = "block";
+    window.addEventListener("beforeinstallprompt", (e) => {
+      console.log("Install prompt fired");
+      e.preventDefault();
+      deferredPrompt = e;
+      document.getElementById("install-button").style.display = "inline-block";
     });
 
     document.getElementById("install-button").addEventListener("click", () => {
@@ -178,6 +171,13 @@
         });
       }
     });
+
+    // Register Service Worker
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(() => console.log('Service Worker registered'))
+        .catch(err => console.error('SW registration failed:', err));
+    }
   </script>
 </body>
 </html>
