--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <body>
   <!-- Loading Splash -->
   <div class="loading-screen" id="loading-screen">
-    <img src="logo.png" alt="Loading" class="spinner-logo" />
+    <img src="icon-192x192.png" alt="Loading" class="spinner-logo" />
   </div>
 
   <h1>Welcome to Country Inns</h1>
