--- a/index.html
+++ b/index.html
@@ -2,17 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Country Inns App</title>
 
-  <!-- PWA Manifest -->
-  <link rel="manifest" href="manifest.json" />
-
-  <!-- Favicon -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-
-  <!-- Theme Color -->
-  <meta name="theme-color" content="#000000" />
+  <!-- PWA Setup -->
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <meta name="theme-color" content="#000000">
 
   <style>
     :root {
@@ -39,7 +35,7 @@
       color: #fff;
     }
 
-    /* Loading Screen */
+    /* Splash Screen */
     .loading-screen {
       position: fixed;
       top: 0; left: 0;
@@ -48,15 +44,12 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
       z-index: 9999;
       transition: opacity var(--transition-speed);
     }
-
     .dark-mode .loading-screen {
       background: var(--background-dark);
     }
-
     .loading-screen.fade-out {
       opacity: 0;
       pointer-events: none;
@@ -65,18 +58,15 @@
     .spinner-logo {
       width: 100px;
       height: 100px;
-      margin-bottom: 20px;
-      animation: spin 2s linear infinite, fadeIn 2s ease-in-out forwards;
       opacity: 0;
+      animation: fadeInOut 2s ease-in-out forwards;
     }
 
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    @keyframes fadeIn {
-      to { opacity: 1; }
+    @keyframes fadeInOut {
+      0% { opacity: 0; }
+      20% { opacity: 1; }
+      80% { opacity: 1; }
+      100% { opacity: 0; }
     }
 
     /* Buttons */
@@ -102,18 +92,16 @@
     .dark-mode .button {
       background-color: #2196F3;
     }
-
-    .icon {
-      margin-right: 8px;
-    }
   </style>
 </head>
 <body>
-  <!-- Loading Splash -->
+
+  <!-- Splash -->
   <div class="loading-screen" id="loading-screen">
-    <img src="icon-192x192.png" alt="Loading" class="spinner-logo" />
+    <img src="icon-192x192.png" alt="Loading" class="png" />
   </div>
 
+  <!-- Main UI -->
   <h1>Welcome to Country Inns</h1>
   <button id="dark-mode-toggle" class="button">🌙 Toggle Dark Mode</button>
   <button id="open-site" class="button">🌐 Open Web Version</button>
@@ -122,43 +110,40 @@
   <script>
     const appURL = "https://sites.google.com/view/countryinnsnewforest";
 
-    // Redirect if installed
+    // Redirect to live site if installed
     if (window.matchMedia('(display-mode: standalone)').matches || navigator.standalone) {
       window.location.href = appURL;
     }
 
-    // Splash screen delay
+    // Splash Screen Fade
     window.addEventListener("load", function () {
       setTimeout(() => {
         document.getElementById("loading-screen").classList.add("fade-out");
       }, 2000);
     });
 
-    // Dark mode toggle
+    // Dark Mode Toggle
     const darkModeToggle = document.getElementById("dark-mode-toggle");
     if (localStorage.getItem("dark-mode") === "enabled") {
       document.body.classList.add("dark-mode");
       darkModeToggle.textContent = "☀️ Light Mode";
     }
-
     darkModeToggle.addEventListener("click", function () {
       document.body.classList.toggle("dark-mode");
-      const isDark = document.body.classList.contains("dark-mode");
-      darkModeToggle.textContent = isDark ? "☀️ Light Mode" : "🌙 Dark Mode";
-      localStorage.setItem("dark-mode", isDark ? "enabled" : "disabled");
+      darkModeToggle.textContent = document.body.classList.contains("dark-mode") ? "☀️ Light Mode" : "🌙 Dark Mode";
+      localStorage.setItem("dark-mode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
     });
 
-    // Open live site
+    // Open Main Web Site
     document.getElementById("open-site").addEventListener("click", function () {
       window.location.href = appURL;
     });
 
-    // Install prompt
+    // Install App Button
     let deferredPrompt;
-    window.addEventListener("beforeinstallprompt", (e) => {
-      console.log("Install prompt fired");
-      e.preventDefault();
-      deferredPrompt = e;
+    window.addEventListener("beforeinstallprompt", (event) => {
+      event.preventDefault();
+      deferredPrompt = event;
       document.getElementById("install-button").style.display = "inline-block";
     });
 
@@ -172,11 +157,9 @@
       }
     });
 
-    // Register Service Worker
+    // Optional: Register service worker
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('Service Worker registered'))
-        .catch(err => console.error('SW registration failed:', err));
+      navigator.serviceWorker.register('/service-worker.js').catch(console.error);
     }
   </script>
 </body>
