--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Country Inns App</title>
 
   <!-- PWA Setup -->
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <meta name="theme-color" content="#000000">
 
