--- a/index.html
+++ b/index.html
@@ -182,5 +182,7 @@
       navigator.serviceWorker.register('/service-worker.js').catch(console.error);
     }
   </script>
+  <script src="/countryinns-pwa/app.js">
+ </script>
 </body>
 </html>
