--- a/index.html
+++ b/index.html
@@ -2,63 +2,145 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Country Inns App</title>
-
-  <!-- PWA Setup -->
-  <link rel="manifest" href="manifest.webmanifest">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <meta name="theme-color" content="#000000">
-
   <style>
     :root {
-      --primary-color: #007bff;
-      --text-color: #333;
-      --background-light: #ffffff;
-      --background-dark: #121212;
-      --button-bg: var(--primary-color);
+      --bg-gradient: linear-gradient(135deg, #013220, #2e8b57); /* dark forest green to sea green */
+      --container-bg: rgba(0, 0, 0, 0.6);
+      --text-color: #fff;
+      --button-text: #013220;
+      --button-bg: #90ee90; /* light green */
+      --button-bg-hover: #77dd77; /* softer green */
+    }
+    [data-theme="light"] {
+      --bg-gradient: linear-gradient(135deg, #f4f9f4, #d0e8d0); /* pale greens */
+      --container-bg: rgba(255, 255, 255, 0.9);
+      --text-color: #013220;
       --button-text: #fff;
-      --transition-speed: 0.3s;
+      --button-bg: #2e8b57; /* sea green */
+      --button-bg-hover: #246b45;
     }
-
     body {
-      font-family: 'Arial', sans-serif;
-      text-align: center;
-      padding: 20px;
-      background-color: var(--background-light);
-      color: var(--text-color);
-      transition: background-color var(--transition-speed), color var(--transition-speed);
-    }
-
-    .dark-mode {
-      background-color: var(--background-dark);
-      color: #fff;
-    }
-
-    /* Splash Screen */
-    .loading-screen {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: var(--background-light);
+      margin: 0;
+      font-family: "Segoe UI", Tahoma, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
-      z-index: 9999;
-      transition: opacity var(--transition-speed);
+      height: 100vh;
+      background: var(--bg-gradient);
+      color: var(--text-color);
+      text-align: center;
+      transition: all 0.3s ease;
+    }
+    .container {
+      max-width: 400px;
+      background: var(--container-bg);
+      padding: 2rem;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+      transition: all 0.3s ease;
+    }
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    p {
+      margin-bottom: 2rem;
+      line-height: 1.5;
+    }
+    .buttons {
+      display: flex;
       flex-direction: column;
+      gap: 1rem;
     }
-    .dark-mode .loading-screen {
-      background: var(--background-dark);
+    .btn {
+      padding: 0.9rem;
+      border-radius: 10px;
+      border: none;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
     }
-    .loading-screen.fade-out {
-      opacity: 0;
-      pointer-events: none;
+    .btn-install {
+      background: var(--button-bg);
+      color: var(--button-text);
+    }
+    .btn-install:hover {
+      background: var(--button-bg-hover);
+    }
+    .btn-web {
+      background: transparent;
+      border: 2px solid var(--text-color);
+      color: var(--text-color);
+      text-decoration: none;
+      display: inline-block;
+      text-align: center;
+    }
+    .btn-web:hover {
+      background: rgba(255,255,255,0.1);
+    }
+    .mode-toggle {
+      margin-top: 2rem;
+      font-size: 0.9rem;
+      cursor: pointer;
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Country Inns</h1>
+    <p>Stay connected with all our pubs, menus, and events.<br>
+    Install the app for the best experience or continue to the web version.</p>
+    <div class="buttons">
+      <button class="btn btn-install" id="installBtn" style="display:none;">📲 Install the App</button>
+      <a href="https://sites.google.com/view/countryinnsnewforest" class="btn btn-web">🌐 Continue to Web</a>
+    </div>
+    <div class="mode-toggle" id="modeToggle">Switch to Dark/Light Mode</div>
+  </div>
+
+  <script>
+    // ===== Theme persistence =====
+    const savedTheme = localStorage.getItem('theme');
+    if (savedTheme) {
+      document.body.setAttribute('data-theme', savedTheme);
     }
 
-    .spinner-wrapper {
-      position: relative;
-      width: 100px;
+    const toggle = document.getElementById('modeToggle');
+    toggle.addEventListener('click', () => {
+      const currentTheme = document.body.getAttribute('data-theme');
+      if (currentTheme === 'light') {
+        document.body.removeAttribute('data-theme');
+        localStorage.setItem('theme', '');
+      } else {
+        document.body.setAttribute('data-theme', 'light');
+        localStorage.setItem('theme', 'light');
+      }
+    });
+
+    // ===== PWA Install prompt =====
+    let deferredPrompt;
+    const installBtn = document.getElementById('installBtn');
+
+    window.addEventListener('beforeinstallprompt', (e) => {
+      e.preventDefault();
+      deferredPrompt = e;
+      installBtn.style.display = 'block';
+    });
+
+    installBtn.addEventListener('click', async () => {
+      if (deferredPrompt) {
+        deferredPrompt.prompt();
+        const { outcome } = await deferredPrompt.userChoice;
+        console.log(`User choice: ${outcome}`);
+        deferredPrompt = null;
+      }
+    });
+  </script>
+</body>
+</html>
       height: 100px;
     }
 
