--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
     Install the app for the best experience or continue to the web version.</p>
     <div class="buttons">
       <button class="btn btn-install" id="installBtn" style="display:none;">📲 Install the App</button>
-      <a href="https://sites.google.com/view/countryinnsnewforest" class="btn btn-web">🌐 Continue to Web</a>
+      <a href="https://sites.google.com/view/countryinnsnewforest" class="btn btn-web">🌐 Continue to Web <a href="home.html" class="button">Continue to Web App</a>
+ </a>
     </div>
     <div class="mode-toggle" id="modeToggle">Switch to Dark/Light Mode</div>
   </div>
