--- a/index.html
+++ b/index.html
@@ -90,18 +90,19 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Country Inns</h1>
-    <p>Stay connected with all our pubs, menus, and events.<br>
-    Install the app for the best experience or continue to the web version.</p>
-    <div class="buttons">
-      <button class="btn btn-install" id="installBtn" style="display:none;">📲 Install the App</button>
-      <a href="https://sites.google.com/view/countryinnsnewforest" class="btn btn-web">🌐 Continue to Web <a href="home.html" class="button">Continue to Web App</a>
- </a>
-    </div>
-    <div class="mode-toggle" id="modeToggle">Switch to Dark/Light Mode</div>
+<div class="container"> 
+  <h1>Country Inns</h1>
+  <p>
+    Stay connected with all our pubs, menus, and events.<br>
+    Install the app for the best experience or continue to the web version.
+  </p>
+  <div class="buttons">
+    <button class="btn btn-install" id="installBtn" style="display:none;">📲 Install the App</button>
+    <a href="home.html" class="btn btn-web">🌐 Continue to Web App</a>
   </div>
-
+  <div class="mode-toggle" id="modeToggle">Switch to Dark/Light Mode</div>
+</div>
+  
   <script>
     // ===== Theme persistence =====
     const savedTheme = localStorage.getItem('theme');
