--- a/home.html
+++ b/home.html
@@ -196,36 +196,35 @@
   <section>
     <h2>Explore Our Inns</h2>
 <div class="pubs-grid">
-  <div class="pub-tile">
+  <a class="pub-tile" href="boldforester.html">
     <img src="https://images.unsplash.com/photo-1505691938895-1758d7feb511?auto=format&fit=crop&w=800&q=80" alt="The Bold Forester">
     <span>The Bold Forester</span>
-  </div>
-  <div class="pub-tile">
+  </a>
+  <a class="pub-tile" href="lambinn.html">
     <img src="https://images.unsplash.com/photo-1565299507177-b0ac66763828?auto=format&fit=crop&w=800&q=80" alt="The Lamb Inn">
     <span>The Lamb Inn</span>
-  </div>
-  <div class="pub-tile">
+  </a>
+  <a class="pub-tile" href="royaloak.html">
     <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=800&q=80" alt="The Royal Oak">
     <span>The Royal Oak</span>
-  </div>
-  <div class="pub-tile">
+  </a>
+  <a class="pub-tile" href="woolpack.html">
     <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=800&q=80" alt="The Woolpack">
     <span>The Woolpack</span>
-  </div>
-  <div class="pub-tile">
+  </a>
+  <a class="pub-tile" href="fightingcocks.html">
     <img src="https://images.unsplash.com/photo-1580409735524-8863a838bcb6?auto=format&fit=crop&w=800&q=80" alt="The Fighting Cocks">
     <span>The Fighting Cocks</span>
-  </div>
-  <div class="pub-tile">
+  </a>
+  <a class="pub-tile" href="trustyservant.html">
     <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?auto=format&fit=crop&w=800&q=80" alt="The Trusty Servant">
     <span>The Trusty Servant</span>
-  </div>
-  <div class="pub-tile">
+  </a>
+  <a class="pub-tile" href="newforestinn.html">
     <img src="https://images.unsplash.com/photo-1578683010236-d716f9a3f461?auto=format&fit=crop&w=800&q=80" alt="The New Forest Inn">
     <span>The New Forest Inn</span>
-  </div>
+  </a>
 </div>
-  </section>
 
   <!-- Loyalty -->
   <section>
