--- a/boldforester.html
+++ b/boldforester.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>The Bold Forester</h1>
-  <p>Welcome to The Bold Forester. Menus, rooms & events coming soon!</p>
+  <p>Welcome to The Bold Forester. Menus, events & promotions coming soon!</p>
   <p><a href="home.html">← Back to Home</a></p>
 </body>
 </html>
