--- a/lambinn.html
+++ b/lambinn.html
@@ -91,15 +91,17 @@
 
     <h2>Food Menus</h2>
     <div class="buttons">
-      <a href="menus/lambinn-lunch.html">Lunch Menu</a>
-      <a href="menus/lambinn-dinner.html">Dinner Menu</a>
-      <a href="menus/lambinn-sunday.html">Sunday Roast Menu</a>
+      <a href="menus/lambinnmenu.html">Menu</a>
+      <a href="menus/lambinn-sunday.html">Sunday Menu</a>
+      <a href="menus/lambinn-kids-menu.html">Kids Menu</a>
+      <a href="menus/lambinn-desserts-menu.html">Desserts Menu</a>
     </div>
 
     <h2>Drink Menus</h2>
     <div class="buttons">
       <a href="menus/lambinn-drinks.html">Drinks Menu</a>
       <a href="menus/lambinn-wine.html">Wine List</a>
+      <a href="menus/lambinn-cocktail-menu.html">Cocktail Menu</a>
     </div>
 
     <h2>Extras</h2>
