--- a/lambinn.html
+++ b/lambinn.html
@@ -80,10 +80,10 @@
 </head>
 <body>
   <header>
-    <h1>The Lamb Inn</h1>
-    <img src="images/lambinn-logo.png" alt="The Lamb Inn Logo" class="logo">
-  </header>
-
+  <h1>The Lamb Inn</h1>
+  <img src="android-chrome-192x192.png" alt="The Lamb Inn Logo" class="logo">
+</header>
+  
   <div class="hero"></div>
 
   <div class="content">
