--- a/lambinn.html
+++ b/lambinn.html
@@ -80,7 +80,7 @@
 </head>
 <body>
   <header>
-  <img src="android-chrome-192x192.png" alt="The Lamb Inn Logo" class="logo">
+  <img src="The Lamb Inn.png" alt="The Lamb Inn Logo" class="logo">
     <h1>The Lamb Inn</h1>
 </header>
   
