--- a/lambinn.html
+++ b/lambinn.html
@@ -107,7 +107,7 @@
       <a href="promotions/lambinn.html">Promotions</a>
       <a href="social/lambinn.html">Social Media</a>
       <a href="https://www.thelambnomansland.co.uk/">Official Website</a>
-      <a href="index.html">⬅ Back to Home</a>
+      <a href="home.html">⬅ Back to Home</a>
     </div>
   </div>
 
