--- a/home.html
+++ b/home.html
@@ -213,7 +213,7 @@
     <span>The Woolpack</span>
   </a>
   <a class="pub-tile" href="fightingcocks.html">
-    <img src="https://images.unsplash.com/photo-1580409735524-8863a838bcb6?auto=format&fit=crop&w=800&q=80" alt="The Fighting Cocks">
+    <img src="Fighting-Cocks-images/fighting-coq-scaled.jpg" alt="The Fighting Cocks">
     <span>The Fighting Cocks</span>
   </a>
   <a class="pub-tile" href="trustyservant.html">
