--- a/home.html
+++ b/home.html
@@ -217,11 +217,11 @@
     <span>The Fighting Cocks</span>
   </a>
   <a class="pub-tile" href="trustyservant.html">
-    <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?auto=format&fit=crop&w=800&q=80" alt="The Trusty Servant">
+    <img src="Trusty-Servant-images/Trusty.jpg" alt="The Trusty Servant">
     <span>The Trusty Servant</span>
   </a>
   <a class="pub-tile" href="newforestinn.html">
-    <img src="https://images.unsplash.com/photo-1578683010236-d716f9a3f461?auto=format&fit=crop&w=800&q=80" alt="The New Forest Inn">
+    <img src="New-Forest-Inn-images/NFI.jpg" alt="The New Forest Inn">
     <span>The New Forest Inn</span>
   </a>
 </div>
