--- a/boldforester.html
+++ b/boldforester.html
@@ -88,7 +88,7 @@
 
     <h2>Food Menus</h2>
     <div class="buttons">
-      <a href="menus/lambinnmenu.html">Menu</a>
+      <a href="bold-forester-images/bold-forester-menus/main-menu/NEW-MENU-SPRING-SUMMER-2025.html">Menu</a>
       <a href="menus/lambinn-sunday.html">Sunday Menu</a>
       <a href="menus/lambinn-kids-menu.html">Kids Menu</a>
       <a href="menus/lambinn-desserts-menu.html">Desserts Menu</a>
