--- a/home.html
+++ b/home.html
@@ -166,7 +166,8 @@
   <!-- Hero -->
   <div class="hero">
     <h1>Country Inns</h1>
-    <p>Seven countryside pubs, one app — food, drinks, rooms & events.</p>
+    <p>7 countryside pubs, 1 app
+      Food, Drinks, Rooms, Events & Promotions.</p>
     <div class="buttons">
       <button>View Menus</button>
       <button>What's On</button>
