--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     /* Hero Section */
     .hero {
       background: linear-gradient(rgba(46,70,49,0.7), rgba(46,70,49,0.7)),
-                  url('andy-newton-Od9W1_kbX8s-unsplash.jpg') center/cover no-repeat;
+                  url('ellen-kerbey-bA7Qt1EjtTU-unsplash.jpg') center/cover no-repeat;
       color: #f8f5e9;
       text-align: center;
       padding: 80px 20px;
@@ -166,7 +166,7 @@
   <!-- Hero -->
   <div class="hero">
     <h1>Country Inns</h1>
-    <p>7 countryside pubs, 1 app
+    <p>7 countryside pubs, 1 app - 
       Food, Drinks, Rooms, Events & Promotions.</p>
     <div class="buttons">
       <button>View Menus</button>
