--- a/home.html
+++ b/home.html
@@ -227,15 +227,14 @@
   </a>
 </div>
 
-  <!-- Loyalty -->
-  <section>
-    <div class="loyalty">
-      <h2>Loyalty Club</h2>
-      <p>Join our Country Inns Loyalty Club — collect stamps and earn rewards.</p>
-      <button>Get Loyalty Card</button>
-    </div>
-  </section>
-
+  <!-- About -->
+<section>
+  <div class="about">
+    <h2>Welcome to Country Inns</h2>
+    <p>Discover the charm of our 7 unique pubs across the New Forest. Each offers its own atmosphere, from rustic countryside inns to vibrant village hubs — all with a warm welcome, freshly homemade food, and great drinks.</p>
+    <button onclick="window.location.href='/our-pubs.html'">Explore Our Pubs</button>
+  </div>
+</section>
   <!-- Footer -->
   <footer>
     <p>
