--- a/home.html
+++ b/home.html
@@ -233,15 +233,12 @@
 </div>
     
   <!-- Footer -->
-  <footer>
-    <p>
-      <a href="#">Menus</a> | 
-      <a href="#">Events</a> | 
-      <a href="#">Feedback</a> | 
-      <a href="#">Contact Us</a>
-    </p>
-    <p>&copy; 2025 Country Inns</p>
-  </footer>
+<footer>
+  <p>Country Inns – 7 unique pubs in the New Forest</p>
+  <p>Explore each pub above to find menus, events, rooms, and more.</p>
+  <p>&copy; 2025 Country Inns</p>
+</footer>
+
 
 </body>
 </html>
