--- a/home.html
+++ b/home.html
@@ -188,12 +188,11 @@
 
     <!-- Festive Feast -->
     <div class="event-card">
-      <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=400&q=80" alt="Festive Feast">
+      <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=800&q=80" alt="Festive Feast">
       <h3>Festive Feast</h3>
       <p>Available 1st–23rd December across all our pubs.
         Book before 31st October and save £5 per head!</p>
       <a href="festive-feast.html" class="btn">View Details</a>
-      <button>Add to Calendar</button>
     </div>
 
     <!-- Sunday Roasts -->
@@ -203,7 +202,6 @@
       <p>Every Sunday, enjoy a traditional roast, 
         with all the trimmings at any Country Inns pub.</p>
       <a href="sunday-roast.html" class="btn">See More</a>
-      <button>Add to Calendar</button>
     </div>
 
     <!-- Dog Friendly -->
@@ -212,7 +210,7 @@
       <h3>Dog Friendly</h3>
       <p>All our pubs are dog-friendly,
         bring your four-legged friends along!</p>
-      <a href="dog-friendly.html" class="btn">Learn More</a>
+      <a href="dog-friendly.html"
     </div>
 
     <!-- Local Ales & Wines -->
@@ -221,7 +219,6 @@
       <h3>Local Ales & Fine Wines</h3>
       <p>Discover our carefully chosen local ales and wines,
         available across all Country Inns pubs.</p>
-      <a href="drinks-selection.html" class="btn">Explore</a>
     </div>
 
     <!-- Country Inns Experience -->
@@ -230,7 +227,7 @@
       <h3>Country Inns Experience</h3>
       <p>Cosy pubs, crackling fires, hearty meals, 
         and a warm welcome wherever you visit.</p>
-      <a href="country-inns-experience.html" class="btn">Find Out More</a>
+      <a href="country-inns-experience.html"
     </div>
 
   </div>
